--- a/projects/01-twitter-follow-card/src/App.css
+++ b/projects/01-twitter-follow-card/src/App.css
@@ -39,13 +39,36 @@
 }
 
 .tw-followCard-button:hover {
-    background-color: #096;
+    opacity: .8;
 }
 
 .tw-followCard-button.is-following {
-    border: 1px solid red;
+    border: 1px solid #bbb;
+    background: transparent;
+    color: #fff;
+    width: 140px;
 }
 
 .tw-followCard-button.is-following:hover {
-    background: red;
+    background: rgba(255, 0, 0, .178);
+    color: red;
+    border: 1px solid red;
+    transition: .3s ease all;
+    opacity: 1;
+}
+
+.tw-followCard-button.is-following:hover .tw-followCard-text {
+    display: none;
+}
+
+.tw-followCard-button.is-following:hover .tw-followCard-stopFollow {
+    display: block;
+}
+
+.tw-followCard-stopFollow {
+    display: none;
+}
+
+.tw-followCard-text {
+    display: block;
 }
