Updated body style to show theboard in the middle of the screen

--- a/projects/02-tic-tac-toe/src/index.css
+++ b/projects/02-tic-tac-toe/src/index.css
@@ -18,6 +18,9 @@
 body {
   margin: 0;
   display: flex;
+  /* place board in the middle of the screenn */ 
+  place-items: center;
+  /*align-items: center;*/
   justify-content: center;
   min-width: 320px;
   min-height: 100vh;
