--- a/projects/04-react-prueba-tecnica/src/App.css
+++ b/projects/04-react-prueba-tecnica/src/App.css
@@ -3,6 +3,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
-    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    font-family: system-ui;
 }
