Updated products style to make the responsive grid work better

--- a/projects/06-shopping-cart/src/components/Products.css
+++ b/projects/06-shopping-cart/src/components/Products.css
@@ -1,6 +1,6 @@
 .products {
     width: 100%;
-    display: flex;
+    /*display: flex;*/
     justify-content: center;
     align-items: center;
   }
